Update primary menu for wrap bug on iPhone.

--- a/src/scss/components/_menus.scss
+++ b/src/scss/components/_menus.scss
@@ -64,7 +64,7 @@
           width: 50%;
           margin: 0;
           display: block;
-          font-size: $type-2;
+          font-size: $type-1;
           margin-bottom: $golden-ratio-0;
 
           > a {
